alignment ot rating container fixed

--- a/src/app/shell/details/details-tabs/reviews/rate/rate.component.scss
+++ b/src/app/shell/details/details-tabs/reviews/rate/rate.component.scss
@@ -1,1 +1,5 @@
 @import 'src/app/shared/styles/buttons.scss';
+
+.no-margin {
+  margin: 0;
+}
