--- a/src/app/shell/details/details-tabs/reviews/reviews.component.scss
+++ b/src/app/shell/details/details-tabs/reviews/reviews.component.scss
@@ -35,6 +35,7 @@
 .rate {
   border-bottom: 1px solid #e3e3e3;
   margin: 0;
+  padding-bottom: 1rem;
   &-author {
     font-family: Innerspace;
     font-style: normal;
